Стилизован компонент TodoItem

--- a/src/components/TodoItem.module.css
+++ b/src/components/TodoItem.module.css
@@ -1,3 +1,9 @@
+@import url(./NewTodoItem.module.css);
+
+.form {
+    align-items: center;
+}
+
 .compeletedTitle {
     text-decoration: line-through;
 }
