--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 button, input {
