--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     background-color: #232323;
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    margin-top: 100px;
     justify-content: center;
 }
 
@@ -29,12 +29,40 @@ ul {
     gap: 10px;
 }
 
-button, input {
+button,
+input {
     padding: 10px 16px;
 }
 
 input[type="checkbox"] {
-  accent-color: var(--success);
-  width: 20px;
-  height: 20px;
+    accent-color: var(--success);
+    width: 20px;
+    height: 20px;
+}
+
+.loader {
+    transform: translate(-50%, -50%);
+    width: 25px;
+    height: 25px;
+    border: 5px solid var(--primary);
+    border-radius: 50%;
+    border-left-color: transparent;
+    animation: loader 1s infinite;
+}
+
+.loaderWrapper {
+    display: flex;
+    justify-content: center;
+    min-height: 150px;
+    align-items: center;
+}
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
