--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,9 @@ input[type="checkbox"] {
         transform: rotate(360deg);
     }
 }
+
+.errorMessage {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
